--- a/Source/CavitationMod/Cavitation/Cavitation.csproj
+++ b/Source/CavitationMod/Cavitation/Cavitation.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Caviation</RootNamespace>
-    <AssemblyName>Caviation</AssemblyName>
+    <AssemblyName>Cavitation</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FXModuleAnimateNaval.cs" />
+    <Compile Include="ModuleEngineFlooding.cs" />
     <Compile Include="ModuleShipBallast.cs" />
     <Compile Include="ModuleSplashedThrust.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
