--- a/Gamedata/KerbalPowers/Electrics/Patches/Fuel Cells.cfg
+++ b/Gamedata/KerbalPowers/Electrics/Patches/Fuel Cells.cfg
@@ -17,13 +17,13 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = LiquidFuel
-			Ratio = 2.025
+			Ratio = 0.2025
 			FlowMode = STAGE_PRIORITY_FLOW
   		}
 		INPUT_RESOURCE
 		{
 			ResourceName = Oxidizer
-			Ratio = 2.475
+			Ratio = 0.2475
 			FlowMode = STAGE_PRIORITY_FLOW
 		}
 		OUTPUT_RESOURCE
@@ -51,7 +51,7 @@
 		 INPUT_RESOURCE
 		 {
 			ResourceName = LiquidFuel
-			Ratio = 3.037
+			Ratio = 0.3037
 			FlowMode = STAGE_PRIORITY_FLOW
 		 }
 		 INPUT_RESOURCE
@@ -89,13 +89,13 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = LiquidFuel
-			Ratio = 0.2025
+			Ratio = 0.02025
 			FlowMode = STAGE_PRIORITY_FLOW
   		}
 		INPUT_RESOURCE
 		{
 			ResourceName = Oxidizer
-			Ratio = 0.2475
+			Ratio = 0.02475
 			FlowMode = STAGE_PRIORITY_FLOW
 		}
 		OUTPUT_RESOURCE
@@ -123,14 +123,14 @@
 		 INPUT_RESOURCE
 		 {
 			ResourceName = LiquidFuel
-			Ratio = 0.3037
+			Ratio = 0.03037
 			FlowMode = STAGE_PRIORITY_FLOW
 		 }
 		 INPUT_RESOURCE
 		 {
 			ResourceName = IntakeAir
 			ignoreForIsp = True
-			Ratio = 30
+			Ratio = 10
 		 }
 		 OUTPUT_RESOURCE
 		 {
@@ -161,13 +161,13 @@
 		 INPUT_RESOURCE
 		 {
 			ResourceName = LiquidFuel
-			Ratio = 0.016875
+			Ratio = 0.0016875
 			FlowMode = STAGE_PRIORITY_FLOW
 		 }
 		 INPUT_RESOURCE
 		 {
 			ResourceName = Oxidizer
-			Ratio = 0.020625
+			Ratio = 0.0020625
 			FlowMode = STAGE_PRIORITY_FLOW
 		 }
 		 OUTPUT_RESOURCE
@@ -194,14 +194,14 @@
 		 INPUT_RESOURCE
 		 {
 			ResourceName = LiquidFuel
-			Ratio = 0.025
+			Ratio = 0.0025
 			FlowMode = STAGE_PRIORITY_FLOW
 		 }
 		 INPUT_RESOURCE
 		 {
 			ResourceName = IntakeAir
 			ignoreForIsp = True
-			Ratio = 0.5
+			Ratio = 0.15
 		 }
 		 OUTPUT_RESOURCE
 		 {
