--- a/Gamedata/KerbalPowers/Electrics/Patches/VABOrganiser_Electrics.cfg
+++ b/Gamedata/KerbalPowers/Electrics/Patches/VABOrganiser_Electrics.cfg
@@ -1,6 +1,6 @@
 /// Subcategory assignments for KP parts
 
-@PART[NuclearReactor]:FOR[VABOrganizer]
+@PART[kpdReactor]:FOR[VABOrganizer]
 {
   %VABORGANIZER
   {
@@ -8,7 +8,7 @@
   }
 }
 
-@PART[Turbine]:FOR[VABOrganizer]
+@PART[kpdTurbine]:FOR[VABOrganizer]
 {
   %VABORGANIZER
   {
