--- a/Gamedata/KerbalPowers/Electrics/Parts/Reactor/Reactor.cfg
+++ b/Gamedata/KerbalPowers/Electrics/Parts/Reactor/Reactor.cfg
@@ -1,7 +1,7 @@
 ﻿PART
 {
 	// --- general parameters ---
-	name = kpdTurbine
+	name = kpdReactor
 	module = Part
 	author = Porkjet
 
@@ -9,8 +9,9 @@
 	MODEL
 	{
 		model = KerbalPowers/Electrics/Parts/Reactor/reactor
-		scale = 1.3, 1, 1
+		scale = 1, 1.3, 1
 	}
+	rescaleFactor = 1
 	
 	// --- node definitions ---
 	node_attach = 1, 0, 0, 1, 0, 0, 2
