--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ Gamedata/KerbalPowers/Naval/Parts/@thumbs/sturgeonPropeller2_icon3.png
 Gamedata/KerbalPowers/Naval/Parts/@thumbs/sturgeonPropeller_icon0.png
 Gamedata/KerbalPowers/Naval/Parts/@thumbs/sturgeonPropeller_icon2.png
 Gamedata/KerbalPowers/Naval/Parts/@thumbs/sturgeonPropeller_icon3.png
+/Source/CavitationMod/Cavitation/.vs
