--- a/Gamedata/KerbalPowers/Electrics/Patches/Fuel Cells.cfg
+++ b/Gamedata/KerbalPowers/Electrics/Patches/Fuel Cells.cfg
@@ -37,10 +37,10 @@
 	MODULE
 	{
 		  name = ModuleExclusiveResourceConverter
-		 ConverterName = Internal Combustion
-		 StartActionName = Start Turbine
-		 StopActionName = Stop Turbine
-		 ToggleActionName = Toggle Turbine
+		 ConverterName = #LOC_KPDynamics_Turbine_Name
+		 StartActionName = #LOC_KPDynamics_Turbine_Start
+		 StopActionName = #LOC_KPDynamics_Turbine_Stop
+		 ToggleActionName = #LOC_KPDynamics_Turbine_Toggle
 		 FillAmount = 0.95
 		AutoShutdown = false
 		GeneratesHeat = true
@@ -77,9 +77,9 @@
 	{
 		  name = ModuleExclusiveResourceConverter
 		 ConverterName = Fuel Cell
-		 StartActionName = Start Generator
-		 StopActionName = Stop Generator
-		 ToggleActionName = Toggle Generator
+		 StartActionName = #autoLOC_502023 //#autoLOC_502023 = Start Fuel Cell
+		 StopActionName = #autoLOC_502024 //#autoLOC_502024 = Stop Fuel Cell
+		 ToggleActionName = #autoLOC_502025 //#autoLOC_502025 = Toggle Fuel Cell
 		 FillAmount = 0.95
 		AutoShutdown = false
 		GeneratesHeat = false
@@ -109,10 +109,10 @@
 	MODULE
 	{
 		  name = ModuleExclusiveResourceConverter
-		 ConverterName = Internal Combustion
-		 StartActionName = Start Generator
-		 StopActionName = Stop Generator
-		 ToggleActionName = Toggle Generator
+		 ConverterName = #LOC_KPDynamics_Generator_Name
+		 StartActionName = #LOC_KPDynamics_Generator_Start
+		 StopActionName = #LOC_KPDynamics_Generator_Stop
+		 ToggleActionName = #LOC_KPDynamics_Generator_Toggle
 		 FillAmount = 0.95
 		AutoShutdown = false
 		GeneratesHeat = true
@@ -181,10 +181,10 @@
 	MODULE
 	{
 		 name = ModuleExclusiveResourceConverter
-		 ConverterName = Internal Combustion
-		 StartActionName = Start Generator
-		 StopActionName = Stop Generator
-		 ToggleActionName = Toggle Generator
+		 ConverterName = #LOC_KPDynamics_Generator_Name
+		 StartActionName = #LOC_KPDynamics_Generator_Start
+		 StopActionName = #LOC_KPDynamics_Generator_Stop
+		 ToggleActionName = #LOC_KPDynamics_Generator_Toggle
 		 FillAmount = 0.95
 		AutoShutdown = false
 		GeneratesHeat = true
