--- a/Gamedata/KerbalPowers/Electrics/electrics-en-us.cfg
+++ b/Gamedata/KerbalPowers/Electrics/electrics-en-us.cfg
@@ -10,6 +10,12 @@ Localization
 		#LOC_KPDynamics_Turbine_Stop = Stop Turbine
 		#LOC_KPDynamics_Turbine_Toggle = Toggle Turbine
 
+		//Patches
+		#LOC_KPDynamics_Generator_Name = Generator
+		#LOC_KPDynamics_Generator_Start = Start Generator
+		#LOC_KPDynamics_Generator_Stop = Stop Generator
+		#LOC_KPDynamics_Generator_Toggle = Toggle Generator
+		
 		//Nuclear Reactor
 		#LOC_KPDynamics_Reactor_title = G-45 "Hyrma" Gas Reactor
 		#LOC_KPDynamics_Reactor_description = A large nuclear turbine generator that produces huge amounts of electricity, suitable for powering marine vessels.
