--- a/Gamedata/KerbalPowers/Naval/Parts/Propellers/Herring.cfg
+++ b/Gamedata/KerbalPowers/Naval/Parts/Propellers/Herring.cfg
@@ -68,8 +68,8 @@
 		}
 		atmosphereCurve
 		{
-			key = 1 0.932 0 0
-			key = 0 0.932 0 0
+			key = 1 0.91 0 0
+			key = 0 0.91 0 0
 		}
 		// Jet params
 		atmChangeFlow = True
@@ -87,6 +87,7 @@
 			key = 0.0728863 0 0 0
 			//key = 0.0728863 0 -92.82475 0
 		}
+		// Water physics is limited | pressure-thrust unchanging
 		atmCurve
 		{
 			key = 1 1 0 0
