--- a/Gamedata/KerbalPowers/Naval/Parts/Propellers/Minnow.cfg
+++ b/Gamedata/KerbalPowers/Naval/Parts/Propellers/Minnow.cfg
@@ -68,8 +68,8 @@
 		}
 		atmosphereCurve
 		{
-			key = 1 1.5 0 0
-			key = 0 1.5 0 0
+			key = 1 0.679 0 0
+			key = 0 0.679 0 0
 		}
 		// Jet params
 		atmChangeFlow = True
@@ -87,10 +87,11 @@
 			key = 0.0974636 0 0 0
 			//key = 0.0874636 0 -89.43073 0
 		}
+		// Water physics is limited | pressure-thrust unchanging
 		atmCurve
 		{
-			key = 1 1.5 0 0
-			key = 0 1.5 0 0
+			key = 1 1 0 0
+			key = 0 1 0 0
 		}
 	}
 	MODULE
