--- a/Gamedata/KerbalPowers/Naval/Parts/Propellers/Sturgeon.cfg
+++ b/Gamedata/KerbalPowers/Naval/Parts/Propellers/Sturgeon.cfg
@@ -68,8 +68,8 @@
 		}
 		atmosphereCurve
 		{
-			key = 0 0.7 0 0
-			key = 1 0.7 0 0
+			key = 0 1.36 0 0
+			key = 1 1.36 0 0
 		}
 		// Jet params
 		atmChangeFlow = True
@@ -86,6 +86,7 @@
 			key = 0.068309 0 0 0
 			//key = 0.058309 0 -89.43073 0
 		}
+		// Water physics is limited | pressure-thrust unchanging
 		atmCurve
 		{
 			key = 0 1 0 0
