--- a/Gamedata/KerbalPowers/Naval/naval-en-us.cfg
+++ b/Gamedata/KerbalPowers/Naval/naval-en-us.cfg
@@ -28,6 +28,8 @@ Localization
 		#LOC_KPDynamics_BallastIdle = Idle
 		#LOC_KPDynamics_BallastDescending = Descending
 		#LOC_KPDynamics_BallastAscending = Ascending
+		#LOC_KPDynamics_BallastFlooding = Flooding
+		#LOC_KPDynamics_BallastDraining = Draining
 		#LOC_KPDynamics_BallastEC = Insufficient Electric Charge
 		#LOC_KPDynamics_BallastAground = Run Aground
 
@@ -48,10 +50,11 @@ Localization
 		#LOC_KPDynamics_BallastVariant_Short = Short
 		#LOC_KPDynamics_BallastVariant_Cap = Capped
 		
+		#LOC_KPDynamics_Propeller_tags = boat naval prop propeller propulsion reverse
+		
 		//Minnow
 		#LOC_KPDynamics_Minnow_title = P-20 "Minnow" Propeller
 		#LOC_KPDynamics_Minnow_description = This tiny three-bladed marine propeller is well suited for smaller naval applications. It doesn't generate a lot of thrust, but still enough to push a little watercraft along.
-		#LOC_KPDynamics_Propeller_tags = boat naval prop propeller propulsion reverse
 		
 		//Herring
 		#LOC_KPDynamics_Herring_title = P-310 "Herring" Propeller
