--- a/Source/CavitationMod/Cavitation/Cavitation.csproj
+++ b/Source/CavitationMod/Cavitation/Cavitation.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ModuleShipBallast.cs" />
     <Compile Include="ModuleSplashedThrust.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
