Hiding placeholder models

--- a/Gamedata/KerbalPowers/Electrics/Parts/Reactor/Reactor.cfg
+++ b/Gamedata/KerbalPowers/Electrics/Parts/Reactor/Reactor.cfg
@@ -19,10 +19,10 @@
 	node_stack_bottom = 0, -3.125, 0, 0, -1, 0, 2
 	
 	// --- editor parameters ---
-	TechRequired = specializedElectrics
+	TechRequired = Unresearcheable //specializedElectrics
 	entryCost = 13500
 	cost = 45000
-	category = Electrical
+	category = none //Electrical
 	subcategory = 0
 	
 	
