--- a/Gamedata/KerbalPowers/Electrics/Patches/Fuel Cells.cfg
+++ b/Gamedata/KerbalPowers/Electrics/Patches/Fuel Cells.cfg
@@ -1,4 +1,4 @@
-@PART[kpdTurbine]
+//@PART[kpdTurbine]
 {
 	!MODULE[ModuleResourceConverter] {}
 	MODULE
@@ -93,7 +93,7 @@
 	}
 }
 
-@PART[FuelCellArray]
+//@PART[FuelCellArray]
 {
 	!MODULE[ModuleResourceConverter] {}
 	MODULE
@@ -189,7 +189,7 @@
 	}
 }
 
-@PART[FuelCell]
+//@PART[FuelCell]
 {
 	!MODULE[ModuleResourceConverter] {}
 	MODULE
